--- a/uniCloud-aliyun/cloudfunctions/notice/package.json
+++ b/uniCloud-aliyun/cloudfunctions/notice/package.json
@@ -4,6 +4,7 @@
   "description": "公告云对象",
   "main": "index.obj.js",
   "dependencies": {
-    "uni-id-common": "file:../common/uni-id-common"
-  }
+    "uni-id-common": "file:../../../uni_modules/uni-id-common/uniCloud/cloudfunctions/common/uni-id-common"
+  },
+  "extensions": {}
 }
